[gd_scene load_steps=3 format=3 uid="uid://dj0vexoixsn23"]

[ext_resource type="Script" path="res://UI/CraftMiniGame/CraftMiniGame.gd" id="1_lma5g"]
[ext_resource type="FontFile" uid="uid://c53kogtyjwsss" path="res://assets/fonts/PixelOperator8-Bold.ttf" id="5_dhvtr"]

[node name="CraftMiniGame" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_left = 345.0
offset_top = 766.0
offset_right = 825.0
offset_bottom = 1766.0
script = ExtResource("1_lma5g")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.235732, 0.235732, 0.235732, 1)

[node name="MarginContainer" type="MarginContainer" parent="ColorRect"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="VBoxContainer" type="VBoxContainer" parent="ColorRect/MarginContainer"]
custom_minimum_size = Vector2(440, 2.08165e-12)
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
theme_override_constants/separation = 40

[node name="ItemImage" type="TextureRect" parent="ColorRect/MarginContainer/VBoxContainer"]
custom_minimum_size = Vector2(300, 300)
layout_mode = 2
stretch_mode = 5

[node name="DotContainer" type="Control" parent="ColorRect/MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="CloseButton" type="Button" parent="."]
custom_minimum_size = Vector2(50, 50)
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -50.0
offset_bottom = 50.0
grow_horizontal = 0
theme_override_fonts/font = ExtResource("5_dhvtr")
text = "X"

[connection signal="pressed" from="CloseButton" to="." method="_on_close_button_pressed"]
